--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -14,26 +14,45 @@ body {
     padding-top: 160px;
     display: flex;
     flex-direction: column;
+    background-color: #eaeae4;
+}
+
+.main {
+    max-width: 2000px;
+    margin: auto;
+    margin-top: -1%;
 }
 
 .header_flex {
-    display: flex;    
+    display: flex;   
+    min-height: 150px; 
+    min-width: 600px;
+    flex: 1 0;
+
 }
 
 .header-image {
     max-width: 100%;
     padding-left: 10%;
     padding-right: 10%;
+
 }
+
 
 .main-cont {
-     display: flex;
-    flex: 1;
+   display: flex;
+   flex: 1;
 }
 
-.container {
-
+.sub-content {
+    display: flex;
+    flex-direction:row;
+    max-width: 80%;
+    margin: auto;
 }
+
+
+
 
 .img-portfolio {
     margin-bottom: 30px;
@@ -84,32 +103,15 @@ footer {
     display: flex;
 }
 
-/* Responsive Styles */
-@media(max-width:991px) {
-    .img-related {
-        margin-bottom: 30px;
-    }
+.footer-image {
+    max-height: 20px;
+    margin-top: 50%;
+    margin-left: 200%;
 }
 
 
-@media (min-width: 1200px)
-.col-lg-12 {
-    width: 50%;
-    float: left;
-}
-
-.left-text {
-    float: left;
- /*   padding-top: 2.2%;
- padding-left: 20%;*/
- /* font-size: 7;*/
- font-style: italic;
- padding-top: 2%;
-}
-
-.pear {
- float: right;
- /*padding-right: 25%;*/
+.info-txt {
+    font-size: 20px;
 }
 
 .page-header {
@@ -136,8 +138,7 @@ footer {
 }
 
 .slide {
-    display: flex;
-    flex-direction:row;
+
     flex: 1; 
 
     width: 20%;
@@ -153,7 +154,46 @@ footer {
     text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
 
     font-family: 'Open Sans', Arial, sans-serif;
-    font-size: 30px;
+    font-size: 24px;
     line-height: 36px;
     letter-spacing: -1px;
+
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
+
+
+/* Responsive Styles */
+@media(max-width:991px) {
+    .img-related {
+        margin-bottom: 30px;
+    }
+}
+
+
+@media (min-width: 1200px)
+.col-lg-12 {
+    width: 50%;
+    float: left;
+}
+
+@media (max-width: 800px) {
+  /* CSS that should be displayed if width is equal to or less than 800px goes here */
+  .sub-content {
+    max-width: 100%
+}
+}
+
+@media (max-width: 550px) {
+    .sub-content {
+        flex-direction: column;
+    }
+
+    .slide {
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2.5%;
+        width: 60%;
+    }
+
 }
