--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -19,7 +19,7 @@ body {
 
 .main {
     max-width: 2000px;
-    margin: auto;
+    margin-bottom: auto;
     margin-top: -1%;
 }
 
@@ -33,8 +33,8 @@ body {
 
 .header-image {
     max-width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
+    /*padding-left: 10%;
+    padding-right: 10%;*/
 
 }
 
