--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -62,7 +62,11 @@ body {
     opacity: 0.8;
 }
 
-.navbar-fixed-top, footer.navbar {
+.navbar-fixed-top {
+    height: 80px;
+}
+
+.footer.navbar {
     /*height: 80px;*/
 }
 
