--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ html, body {
 .header-wrapper {
   padding-top: 9vh;
   margin-bottom: 35vh;
-  font-size: 200%;
+  font-size: 150%;
 }
 
 .page-header {
@@ -78,7 +78,7 @@ canvas[resize] {
 .subline {
   padding-bottom: 5vh;
   text-align: center;
-  font-size: xx-large;
+  font-size: x-large;
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.3);
   font-style: italic;
@@ -109,7 +109,7 @@ canvas[resize] {
     text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
 
     font-family: 'Open Sans', Arial, sans-serif;
-    font-size: 24px;
+    font-size: large;
     line-height: 36px;
     letter-spacing: -1px;
 
@@ -124,7 +124,7 @@ canvas[resize] {
   font-size: xx-large;
   font-family: 'Open Sans', Arial, sans-serif;
   color: rgb(102, 102, 102);
-  font-size: 24px;
+  font-size: large;
   font-style: italic;
   text-align: justify;
 }
