--- a/css/main.css
+++ b/css/main.css
@@ -1609,7 +1609,7 @@ ul.unstyled li {
     padding: 0;
     margin: 0
 }
-@import url("//hello.myfonts.net/count/314625");
+/* @import url("//hello.myfonts.net/count/314625"); */
 @font-face {
     font-family: 'FormularMono';
     /* src: url("../fonts/314625_0_0.eot");
