--- a/src/withStyles/dropdownStyle.css
+++ b/src/withStyles/dropdownStyle.css
@@ -8,7 +8,7 @@
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 25px;
-    height: 50px;
+    height: 100%;
     box-sizing: border-box;
     color: #333;
     cursor: default;
@@ -31,7 +31,7 @@
     border-radius: 25px;
     display: block;
     width: 80px;
-    height: 50px;
+    height: 100%;
     position: absolute;
     right: -0.5px;
     top: 0;
