--- a/src/withStyles/dropdownStyle.css
+++ b/src/withStyles/dropdownStyle.css
@@ -30,11 +30,15 @@
     border: 1px solid #ccc;
     border-radius: 25px;
     display: block;
-    width: 80px;
+    width: 60px;
     height: 100%;
     position: absolute;
     right: -0.5px;
     top: 0;
+    opacity: 0.7;
+    background-image: url('../../imgs/icons/down-arrow.png');
+    background-position: center;
+    background-repeat: no-repeat;
   }
   
   .is-open .Dropdown-arrow {
